Added --pf shortcut

--- a/acxi.1
+++ b/acxi.1
@@ -539,7 +539,7 @@ acxi \-s ./ \-RI cover.jpg\fR
 .fi
 
 .TP
-.B \-\-info\-file\fR, \fB\-\-prefill\-file {file name}\fR
+.B \-\-info\-file\fR, \fB\-\-if\fR, \fB\-\-prefill\-file\fR, \fB\-\-pf\fR {file}
 An alternate file name to use for prefill or infofix. Note that file MUST have a 
 *.txt extension, and should not be anything other than ASCII or UTF8, otherwise 
 you will get ungood results.
