--- a/acxi.1
+++ b/acxi.1
@@ -896,7 +896,7 @@ Samples:
 See \fB\-\-info\-file\fR.
 
 .TP
-.B \-\-prefill\-tag\fR, \fB\-\-pft\fR, \fB\-\-p {tag-data}\fR
+.B \-\-prefill\-tag\fR, \fB\-\-pt\fR, \fB\-\-pft {tag-data}\fR
 Uses same syntax as \fB\-\-tag\fR. One or more tags to populate auto.tag in 
 prefill actions. See also configuration item \fBPREFILL_TAG\fR.
 
