--- a/acxi.1
+++ b/acxi.1
@@ -1308,7 +1308,7 @@ be used to populate the \fBauto.tag\fR fields.
 \fBPREFILL_TAG\fR \- Same syntax as \fB\-\-tag\fR. Remember to clear this if you
 don't want these tags to be always used in prefill actions. 
 .br
-Sample: \fBPREFILL_TAG=TAG1%:value^^TAG2%:value\fR 
+Sample: \fBPREFILL_TAG=GENRE%:Heavy Metal^^IMAGE%:cover.jpg\fR 
 
 \fBTAG_FILE\fR \- Sample: \fBTAG_FILE=autotags.tag\fR 
 
