Extended, added taped by, recorded by to field names for prefill

--- a/acxi.1
+++ b/acxi.1
@@ -801,7 +801,7 @@ Supported field names, and their corresponding tag name:
 \fBGENRE\fR \- Genre
 \fBIMAGE\fR \- Cover,Image
 \fBLOCATION\fR \- City, State, Country, Lieu, Location, Ville.
-\fBPRODUCER\fR \- Producer, Taper
+\fBPRODUCER\fR \- Producer, Recorded by, Taper, Taped By
 \fBVENUE\fR \- Club, Event, Festival, Venue
 \fBYEAR\fR \- Year
 .fi
