readme, man, fixes

--- a/acxi.1
+++ b/acxi.1
@@ -120,8 +120,11 @@ require \fBmetaflac\fR for \fBVORBIS\fR tagging.
 \fB\-\-checksum\fR and \fB\-\-checksum\-delete\fR require \fBmetaflac\fR and 
 \fBmd5sum\fR (or any comparable program that generates md5sums). 
 .IP * 2
-\fB\-\-checksum\-verify\fR requires the \fBflac\fR executable and \fBmd5sum\fR 
-(or any comparable program that generates md5 hashes). 
+\fB\-\-checksum\-verify\fR and \fB\-\-infofix v\fR require the \fBflac\fR 
+executable.
+.IP * 2
+\fB\-\-checksum\-verify\fR requires \fBmd5sum\fR (or any comparable program that 
+generates md5 hashes). 
 .IP * 2
 \fB\-\-fork\fR requires Perl module \fBParallel::ForkManager\fR. 
 .IP * 2
