found corner case, _____ used as line, which tripped track terminator. Removed '_' as terminator type.

--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2022\-11\-27" acxi "acxi manual"
+.TH ACXI 1 "2022\-11\-28" acxi "acxi manual"
 .SH NAME
 acxi \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -854,9 +854,9 @@ notes, and so on, which could then trigger a track count mismatch exit error.
 Also makes it so you don't have to do anything to the info file other than add 
 the terminator string. Not case sensitive. Supported:
 
-One or more: \fB:^_<>\fR followed by zero or one ES, ESL, ET, ETL, END, 
+One or more: \fB:^<>\fR followed by zero or one ES, ESL, ET, ETL, END, 
 END\-TRACKS, END_TRACKS, END TRACKS, END\-SETLIST, END_SETLIST, END SETLIST, 
-terminating in 1 or more \fB:^_<>\fR.
+terminating in 1 or more \fB:^<>\fR.
 
 Sample:
 .nf\fB
