--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2022\-11\-29" acxi "acxi manual"
+.TH ACXI 1 "2022\-11\-30" acxi "acxi manual"
 .SH NAME
 acxi \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -39,7 +39,7 @@ Tagging: \fBacxi\fR [\fB\-\-autotag\fR, \fB\-A\fR]
 [\fB\-\-autotag\-create\-multi\fR, \fB\-M\fR {filename start ID}]
 [\fB\-\-image\fR, \fB\-I\fR {cover image filename}]
 [\fB\-\-info\-file\fR, \fB\-\-prefill\-file\fR {release info file name}] 
-[\fB\-\-infofix\fR, \fB\-X\fR [d|k|l|m|n|q|t|u|v|w|z]] 
+[\fB\-\-infofix\fR, \fB\-X\fR [0|d|k|l|m|n|q|t|u|v|w]] 
 [\fB\-\-info\-rating\fR {2\-xxx}
 [\fB\-\-multiartist\fR, \fB\-\-ma\fR {[at|ta]:separator}]
 [\fB\-\-prefill\fR, \fB\-E\fR] 
@@ -582,6 +582,9 @@ Values (can be combined):
 
 * no option \- clean white space issues. Default action, always runs.
 
+* \fB0\fR \- (zero) turn off leading characters per info file. Useful if you 
+want to use output for copy/paste actions etc.
+
 * \fBd\fR \- set date to ISO format YYYY\-MM\-DD
 
 * \fBk\fR \- set date to ISO format and add day of week after date. Also removes 
@@ -623,8 +626,6 @@ end of track listing.
 \fBq\fR. Adds \fBFLAC FFPs:\fR status line to the \fBq\fR report.
 
 * \fBw\fR \- write changes to info file.
-
-* \fBz\fR \- turn off leading characters per info file.
 
 With no \fBw\fR supplied, will just show what would have happened, with \fBw\fR, 
 writes fixes to file.
@@ -808,9 +809,12 @@ Supported field names, and their corresponding tag name:
 \fBALBUMSORT\fR \- AlbumSort
 \fBARTIST\fR \- Artist, Artists, Artiste, Artistes, Band
 \fBCOMPOSER\fR \- Composer
+\fBCDDB\fR \- CDDB, CDDBID, CDDB-ID, CDDB ID
 \fBDATE\fR \- Date
+\fBETREE\fR \- ETREE, ETREEID, ETREE-ID, ETREE ID. NOTE: not a standard tag.
 \fBGENRE\fR \- Genre
 \fBIMAGE\fR \- Cover,Image
+\fBISRC\fR \- ISRC, ISRCDB, ISRC-DB, ISRC DB
 \fBLOCATION\fR \- City, State, Country, Lieu, Location, Ville.
 \fBPRODUCER\fR \- Producer, Recorded by, Taper, Taped By
 \fBVENUE\fR \- Club, Event, Festival, Venue
@@ -828,11 +832,11 @@ prefill if not in top block.
 
 * \fBComposer:\fR is usually classical only, but up to you.
 
-* \fBVENUE\fR will also be added to \fBLOCATION\fR if no \fBALBUM\fR set.
+* \fBDATE\fR will be prepended to \fBALBUM\fR if no ALBUM supplied.
 
 * See \fB\-Xd\fR for date fixes, prefill only accepts YYYY\-MM\-DD formatting.
 
-* \fBDATE\fR will be prepended to \fBALBUM\fR if no ALBUM supplied.
+* \fBVENUE\fR will also be added to \fBLOCATION\fR if no \fBALBUM\fR set.
 
 * \fBYEAR\fR is generated from \fBDATE\fR if no Year: supplied. 
 
@@ -889,7 +893,8 @@ syntax like \-\-\-\-\-\- is a very common part of info file track values.
 
 Also used with \fB\-Xn\fR and \fB\-Xt\fR.
 
-* Cover:/Image:, Genre:, Producer:/Taper: do not need to be in top block.
+* Cover:/Image:, Genre:, Producer:/Taper:, CDDB, Etree, ISRC, do not need to be 
+in top block.
 
 Should always be run in the flac folder with \fB\-s./\fR or unexpected results 
 could occur.
@@ -910,7 +915,7 @@ Samples:
 \fBacxi \-s./ \-EM d%\-\fR [multi disc, file name sample: d2\-track04.flac];
 
 .TP
-.B \-\-prefill\-file\fR, \fB\-\-info\-file {file name}\fR
+.B \-\-prefill\-file\fR, \fB\-\-pf {file name}\fR
 .br
 See \fB\-\-info\-file\fR.
 
