--- a/acxi.1
+++ b/acxi.1
@@ -836,6 +836,8 @@ prefill if not in top block.
 
 * See \fB\-Xd\fR for date fixes, prefill only accepts YYYY\-MM\-DD formatting.
 
+* If Etree: present, also appends to end of ALBUM string: ' (etree [id])'
+
 * \fBVENUE\fR will also be added to \fBLOCATION\fR if no \fBALBUM\fR set.
 
 * \fBYEAR\fR is generated from \fBDATE\fR if no Year: supplied. 
