added support for -U 3, finally!

--- a/acxi.1
+++ b/acxi.1
@@ -1128,6 +1128,9 @@ Self updater, will update acxi and its man page. Non GNU/LInux will probably
 require changing the default values, which are set in \fBUSER VARIABLES\fR for 
 curl, acxi and man page acxi.1. Requires \fBcurl\fR.
 
+If you add \fB3, like \fB\-U 3\fR, it will update from smxi.org server instead.
+Avoid this unless you have been asked to do it.
+
 .TP
 .B \-\-verbosity\fR, \fB\-v {0-3}\fR
 Dynamically set . Helps for debugging certain types of issues where you might 
