--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2022\-12\-02" acxi "acxi manual"
+.TH ACXI 1 "2022\-12\-05" acxi "acxi manual"
 .SH NAME
 acxi \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -30,7 +30,7 @@ Tagging: [\fB\-\-autotag\fR, \fB\-A\fR]
 [\fB\-\-autotag\-create\-multi\fR, \fB\-M\fR {filename start ID}]
 [\fB\-\-image\fR, \fB\-I\fR {cover image filename}]
 [\fB\-\-info\-file\fR, \fB\-\-prefill\-file\fR {release info file name}] 
-[\fB\-\-infofix\fR, \fB\-X\fR [0|d|k|l|m|n|q|t|u|v|w]] 
+[\fB\-\-infofix\fR, \fB\-X\fR [0|c|d|k|l|m|n|q|t|u|v|w]] 
 [\fB\-\-info\-rating\fR {2\-xxx}
 [\fB\-\-multiartist\fR, \fB\-\-ma\fR {[at|ta]:separator}]
 [\fB\-\-prefill\fR, \fB\-E\fR] 
@@ -632,34 +632,38 @@ An alternate file name to use for prefill or infofix. Note that file MUST have a
 you will get ungood results.
 
 .TP
-.B \-\-infofix\fR, \fB\-X [d|l|n|q|t|u|v|w|z]\fR
-Correct common corruptions to info.txt files. Only to correct these common 
-issues:
+.B \-\-infofix\fR, \fB\-X [c|d|l|n|q|t|u|v|w|z]\fR
+Correct common corruptions to info.txt files. Note that this can be used in bulk 
+mode on sets of directories if all the info text files have the same name.
 
-* Entire file is uppercase (this happens surprisingly often). Applies smart 
-Autoformat fix (\fBu\fR) for Upper/lower case, not recommended if the file has a lot of 
-text in it. Perfect for titles and most standard values, but not for paragraghs
-of text.
+You can use any combination of the following options, or no options.
 
-* Track numbering is defective or inconsistent, and there is not too much extra 
-text.
-
-* Dates are non ISO YYYY\-MM\-DD, like May 23, 1983; 4/12/78; 2011-8-12;
-18.4.21. Always double check file to make sure they aren't using some really
-silly date format, and confirm with d option before using wd to make sure it
-is as expected.
-
-* Trim white spaces off line ends and get rid of extra new lines (default 
-action always).
-
-Values (can be combined):
-
-* no option \- clean white space issues. Default action, always runs.
+* no option \- clean white space. Trim white spaces off line ends, get rid of 
+extra new lines, convert multiple white spaces to single space. Also change tabs 
+to space. 
 
 * \fB0\fR \- (zero) turn off leading characters per info file. Useful if you 
 want to use output for copy/paste actions etc.
 
-* \fBd\fR \- set date to ISO format YYYY\-MM\-DD
+* \fBc\fR \- Try to change CF-1252 Windows special characters like magic quotes 
+to clean ASCII equivalents. Should handle most, but if it hits one it does not 
+know about, it will exit with error with the line number of the file being 
+processed. To let you find these in testing before writing, search the output 
+for:
+
+\fBacxi \-s./ \-X0c | grep \-E 'Processing:|BADCF:'\fR
+
+That will show you all directories with bad characters. There may be other 
+character sets this does not handle, but this should cover most common cases, 
+since most of these come from MS Word or similar saved as .txt files. Be careful
+with this one, CP\-1252 can and sometimes is copied from 8859-1 web pages, among
+other oddities. While this tries to detect 1252, the tests are not reliable, so
+check before using and most important, beforew writing.
+
+* \fBd\fR \- set date to ISO format YYYY\-MM\-DD. Use this to correct dates that 
+are non ISO YYYY\-MM\-DD, like May 23, 1983; 4/12/78; 2011-8-12; 18.4.21. Always 
+double check file to make sure they aren't using some really silly date format, 
+and confirm with d option before using wd to make sure it is as expected.
 
 * \fBk\fR \- set date to ISO format and add day of week after date. Also removes 
 any existing day of weeks from that line. Only does this on first date found in
@@ -674,10 +678,11 @@ in and correct items. Good in combination with \fBt\fR.
 * \fBm\fR \- add (..) around track time when it's included in track title at end 
 of Title string. Required for the prefill track title cleanup of track times. If
 time is located at start of track title, after disk/track numbers, moves to end.
-Note that \fBm\fR should be used together with \fBn\fR for best results.
+Note that \fBm\fR should be used together with \fBn\fR for best results. 
 
 * \fBn\fR \- fix track numbering to be consistent '0X. ' or 'Y-0X'. See 
-\fB\-\-prefill\fR track terminators for stopping fixes at end of track listing.
+\fB\-\-prefill\fR track terminators for stopping fixes at end of track listing. 
+Use when track numbering is defective or inconsistent. 
 
 * \fBq\fR \- add in 2 technical quality info lines after top header. Reads flac 
 file in directory to determine bit rate, sampling frequency, and channels. 
@@ -694,7 +699,10 @@ Quality: /4 ()\fR
 end of track listing.
 
 * \fBu\fR \- run upper case first smart fix. Requires Perl module 
-\fBText::Autoformat\fR.
+\fBText::Autoformat\fR. Use this if entire file is uppercase (this happens 
+surprisingly often). Applies smart Autoformat fix (\fBu\fR) for Upper/lower 
+case, not recommended if the file has a lot of text in it. Perfect for titles 
+and most standard values, but not for paragraghs of text.
 
 * \fBv\fR \- validate \fBFFP\fR hash signatures. \fBFLAC\fR only. Activates 
 \fBq\fR. Adds \fBFLAC FFPs:\fR status line to the \fBq\fR report.
@@ -707,7 +715,7 @@ writes fixes to file.
 Info file fixes would be used before running \fB\-E\fR, and not with any other 
 option. 
 
-See \fB\-\-prefill\-file\fR for using alternate info txt file names.
+See \fB\-\-info\-file\fR for using alternate info txt file names.
 
 Samples: \fBacxi \-s./ -X dtn\fR (to test) \fBacxi \-s./ -X dtnw\fR (to apply)
 
@@ -777,7 +785,8 @@ located in flac directory.
 Two distinct methods are used for Artist, Venue, Location, and Date 
 pre\-filling. 
 
-No blank lines or unsupported data can be in top block for either pre\-fill method. 
+No blank lines or unsupported data can be in top block for either pre\-fill 
+method. 
 
 .B Automatic Detection of Fields
 
