first draft of --info-create

--- a/acxi.1
+++ b/acxi.1
@@ -958,8 +958,8 @@ Cover: cover.jpg\fR
 
 * Performers list must be preceded by a line starting with \fBBand:\fR, 
 \fBLineup:\fR, \fBLine\-up:\fR, or \fBBand Lineup\fR, \fBBand Line\-up\fR, 
-\fBMembers:\fR, or \fBBand Members\fR, and must be followed by the band members 
-list, with no empty lines between performers.
+\fBMembers:\fR, or \fBBand Members\fR, \fBPerformers\fR, and must be followed by 
+the band members list, with no empty lines between performers.
 
 * Track numbers must start with either \fBX-X.\fR, \fBX-XX.\fR (for multidisc), 
 \fBX.\fR or \fBXX.\fR where \fBX\fR is a number. The number of tracks listed 
